# immich-album-exporter

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.e2e.yml  docker-compose.example.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  run.sh
.github/: copilot-instructions.md
.github/workflows/: docker.yml  reusable-e2e.yml  reusable-package.yml  reusable-unit-test.yml
config/: config.example.yml
docs/: CONFIGURATION.MD
scripts/: run-local.sh
src/immich_album_exporter/: __main__.py  config.py  immich_client.py  importer.py  metadata.py  state.py  template.py
tests/: test_importer.py  test_metadata.py  test_state.py  test_template.py
tests/e2e/: run_e2e.py
